install/mini-loop/util/debug-utils/python3-dep/python3-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python3ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python3-service
            port: 
              number: 8889
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: python3-service
            port:
              number: 8888
